# dinotool

./: README.md  pyproject.toml
docs/: reading_outputs.ipynb
src/dinotool/: cli.py  data.py  model.py  utils.py
test/: test_all.py  test_cases.md  test_data.py  test_model.py
test/data/: sintel.avi  sintel.mov
test/test_end_to_end/: test_image.py  test_imagedir.py  test_videodir.py  test_videofile.py
